Build: Introduce source sets for different java versions.